--- a/plotly.html
+++ b/plotly.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Aung’s Academic and Professional Experience Website</title>
+<title>Plotly for Problem 2</title>
 
 <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -356,25 +356,12 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Aung’s Academic and Professional Experience
-Website</h1>
+<h1 class="title toc-ignore">Plotly for Problem 2</h1>
 
 </div>
 
 
-<div id="welcome-to-my-personal-website" class="section level2">
-<h2>Welcome to My Personal Website</h2>
-<p>Hello! I’m Aung.Here is my personal website where I share my academic
-and professional journey.</p>
-<p><img
-src="https://media.giphy.com/media/H7kfFDvD9HSYGRbvid/giphy.gif" /></p>
-</div>
-<div id="academic-and-professional-experience" class="section level2">
-<h2>Academic and Professional Experience</h2>
-<ul>
-<li><a href="Aung%20Resume.pdf">My Resume</a></li>
-</ul>
-</div>
+<p>First plot</p>
 
 
 
