--- a/index.html
+++ b/index.html
@@ -324,10 +324,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="plotly.html">
-    <span class=" Plotly"></span>
-     
-  </a>
+  <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
   <a href="mailto:&lt;anw2158@cumc.columbia.edu&gt;">
@@ -373,6 +370,12 @@ src="https://media.giphy.com/media/H7kfFDvD9HSYGRbvid/giphy.gif" /></p>
 <h2>Academic and Professional Experience</h2>
 <ul>
 <li><a href="Aung%20Resume.pdf">My Resume</a></li>
+</ul>
+</div>
+<div id="link-to-homework-4" class="section level2">
+<h2>Link to Homework 4</h2>
+<ul>
+<li><a href="plotly.html">Plotly</a></li>
 </ul>
 </div>
 
